--- a/toc.yaml
+++ b/toc.yaml
@@ -213,6 +213,7 @@ toc:
       - topicgroup:
           label: Automating and deploying IBM Cloud architectures for SAP by using Terraform
           topics:
+              - sap-terraform-bastion-server.md
               - sap-terraform-create-single-tier.md
               - sap-terraform-multi-tier-anydb-nonhana.md
               - topicgroup:
