publish nw hana kt

--- a/toc.yaml
+++ b/toc.yaml
@@ -229,6 +229,7 @@ toc:
               - sap-terraform-automate-s4hana-ansible.md
               - sap-terraform-automate-bw-4hana.md
               - sap-terraform-automate-3tier-nw-db2.md
+              - sap-terraform-automate-3tier-nw-hana.md
 
   - navgroup:
       id: reference
