--- a/toc.yaml
+++ b/toc.yaml
@@ -179,6 +179,11 @@ toc:
               - sap-provision-intel-bare-metal-optane-plan-deploy.md
               - sap-provision-intel-bare-metal-optane-deploy-infrastructure.md
       - topicgroup:
+          label: Provisioning Intel Bare Metal with Virtual Server (Gen2) for SAP NetWeaver
+          topics:
+              - sap-provision-intel-bare-metal-vpc-gen2-plan-deploy.md
+              - sap-provision-intel-bare-metal-vpc-gen2-deploy-infrastructure.md
+      - topicgroup:
           label: Provisioning Intel Virtual Server (Gen2) for SAP HANA and SAP NetWeaver
           topics:
               - sap-provision-intel-virtual-server-gen2-plan-deploy.md
