--- a/toc.yaml
+++ b/toc.yaml
@@ -49,6 +49,7 @@ toc:
               - sap-offerings-netweaver-iaas-intel-virtual-server-gen2-profiles.md
               - sap-offerings-netweaver-iaas-power-virtual-server-profiles.md
               - sap-offerings-netweaver-iaas-vmware-sddc-profiles.md
+              - sap-offerings-netweaver-iaas-intel-bm-vpc.md
         - topicgroup:
             label: Plan your SAP workloads
             topics:
