--- a/toc.yaml
+++ b/toc.yaml
@@ -244,7 +244,7 @@ toc:
                     - sap-terraform-automate-intro-nw-asesyb.md
                     - sap-terraform-automate-nw-asesyb.md
               - topicgroup:
-                  label: SAP AAS for SAP HANA on AnyDB on IBM Cloud VPC
+                  label: SAP AAS for SAP HANA and AnyDB on IBM Cloud VPC
                   topics:
                     - sap-terraform-automate-intro-hana-aas-anydb.md
                     - sap-terraform-automate-hana-aas-anydb.md
