--- a/toc.yaml
+++ b/toc.yaml
@@ -267,6 +267,8 @@ toc:
         topics:
             - sap-power-virtual-server-ha-rhel.md
             - sap-power-virtual-server-ha-rhel-hana-sr.md
+            - sap-power-virtual-server-ha-rhel-ensa.md
+            - sap-power-virtual-server-ha-rhel-nfs.md
              
   - navgroup:
       id: reference
