--- a/toc.yaml
+++ b/toc.yaml
@@ -268,6 +268,7 @@ toc:
             - sap-power-virtual-server-ha-rhel.md
             - sap-power-virtual-server-ha-rhel-hana-sr.md
             - sap-power-virtual-server-ha-rhel-ensa.md
+            - sap-power-virtual-server-ha-rhel-nfs.md
              
   - navgroup:
       id: reference
