publish hana backup kt

--- a/toc.yaml
+++ b/toc.yaml
@@ -253,6 +253,11 @@ toc:
                   topics:
                     - sap-terraform-ha-overview.md
                     - sap-terraform-s4hana-ha.md
+              - topicgroup:
+                  label: SAP HANA DB backup to Cloud Object Storage
+                  topics:
+                    - sap-terraform-automate-intro-hana-db-backup-cos.md
+                    - sap-terraform-automate-hana-db-backup-cos-proc.md
               - sap-terraform-automate-s4hana-ansible.md
               - topicgroup:
                   label: SAP BW/4HANA 3-tier on IBM Cloud VPC
