--- a/toc.yaml
+++ b/toc.yaml
@@ -275,6 +275,7 @@ toc:
             - sap-power-virtual-server-ha-rhel.md
             - sap-power-virtual-server-ha-rhel-hana-sr.md
             - sap-power-virtual-server-ha-rhel-hana-sr-co.md
+            - sap-power-virtual-server-ha-rhel-hana-sr-aa.md
             - sap-power-virtual-server-ha-rhel-hana-sr-multitier.md
             - sap-power-virtual-server-ha-rhel-ensa.md
             - sap-power-virtual-server-ha-rhel-nfs.md
