--- a/toc.yaml
+++ b/toc.yaml
@@ -280,6 +280,7 @@ toc:
       - topicgroup:
             label: High Availability Scenarios on Power Virtual Server
             topics:
+            - sap-power-virtual-server-ha-overview.md
             - sap-power-virtual-server-ha-vsi.md
             - sap-power-virtual-server-ha-rhel.md
             - sap-power-virtual-server-ha-rhel-hana-sr.md
