--- a/toc.yaml
+++ b/toc.yaml
@@ -232,7 +232,7 @@ toc:
               - sap-terraform-create-single-tier.md
               - sap-terraform-multi-tier-anydb-nonhana.md
               - topicgroup:
-                  label: SAP NetWeaver and Db2 single-tier on IBM Cloud VPC
+                  label: SAP NetWeaver and Db2 2-tier on IBM Cloud VPC
                   topics:
                     - sap-terraform-overview-nw-db2-ansible.md
                     - sap-terraform-nw-db2-ansible-existing-vpc.md
