--- a/toc.yaml
+++ b/toc.yaml
@@ -284,4 +284,4 @@ toc:
               - sap-faq-profile-specs.md
         - link:
             label: Documentation Changelog
-            href: https://github.ibm.com/cloud-docs/sap/commits/
+            href: https://github.com/ibm-cloud-docs/sap/commits/
