--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,6 @@ repos:
     hooks:
       - id: check-yaml
         exclude: .png|.jpg|.svg|.drawio
-      - id: check-xml
-        exclude: .png|.jpg|.svg|.drawio
       - id: check-json
         exclude: .png|.jpg|.svg|.drawio
       - id: end-of-file-fixer
@@ -27,19 +25,9 @@ repos:
         types_or: ["symlink"]
         stages: [manual]
 
-  - repo: https://github.com/ansible/ansible-lint.git
-    rev: v6.22.1
+  - repo: https://github.com/markdownlint/markdownlint
+    rev: v0.12.0
     hooks:
-      - id: ansible-lint
-        exclude: .png|.jpg|.svg|.drawio
-        files: \.(yaml|yml)$
-
-  - repo: https://github.com/syntaqx/git-hooks
-    rev: v0.0.18
-    hooks:
-      - id: forbid-binary
-        exclude: .png|.jpg|.svg|.drawio
-      - id: shellcheck
-        exclude: .png|.jpg|.svg|.drawio
-      - id: go-fmt
-        exclude: .png|.jpg|.svg|.drawio
+      - id: markdownlint
+        name: Markdownlint
+        files: \.(md|mdown|markdown)$
