--- a/toc.yaml
+++ b/toc.yaml
@@ -80,6 +80,7 @@ toc:
                 - plan/sap-app-s4hana.md
                 - plan/sap-app-bw4hana.md
                 - plan/sap-app-commerce.md
+                - plan/sap-app-b1.md
           - topicgroup:
               label: SAP AnyDB and SAP HANA extra additional design considerations
               topics:
