chore: include a file (#572)

--- a/toc.yaml
+++ b/toc.yaml
@@ -95,6 +95,7 @@ toc:
               topics:
                 - plan/sap-partners-veeam.md
                 - plan/sap-partners-ibm-security-services.md
+                - plan/sap-partners-intel-optane-pmem.md
     - navgroup:
         id: tutorial
         topics:
