--- a/toc.yaml
+++ b/toc.yaml
@@ -203,7 +203,8 @@ toc:
                       - howto/vpc-intel-vsi/intel-vsi-terraform-automate-hana-db-backup-cos-proc.md
                 - topicgroup:
                     label: SAP S/4HANA workload deployment on IBM Cloud VPC
-                    topics: 
+                    topics:
+                      - howto/vpc-intel-vsi/intel-vsi-terraform-automate-intro-s4hana-ansible.md
                       - howto/vpc-intel-vsi/intel-vsi-terraform-automate-s4hana-ansible.md
                 - topicgroup:
                     label: SAP HANA DB cross-region DR automation on IBM Cloud VPC
