--- a/toc.yaml
+++ b/toc.yaml
@@ -52,30 +52,30 @@ toc:
           - topicgroup:
               label: Infrastructure profiles for SAP HANA database servers
               topics:
-                - navtitle: Intel Bare Metal server certified profiles for SAP HANA on Classic infrastructure
+                - navtitle: Intel Bare Metal server certified profiles for SAP HANA on Classic
                   topic: plan/sap-offerings-hana-iaas-intel-bare-metal-profiles.md
-                - navtitle: Intel virtual server certified profiles for SAP HANA on VPC infrastructure
+                - navtitle: Intel virtual server certified profiles for SAP HANA on VPC
                   topic: plan/sap-offerings-hana-iaas-intel-virtual-server-gen2-profiles.md
                 - navtitle: Power Virtual Server certified instances for SAP HANA
                   topic: plan/sap-offerings-hana-iaas-power-virtual-server-profiles.md
                 - navtitle: VMware SDDC certified profiles for SAP HANA
                   topic: plan/sap-offerings-hana-iaas-vmware-sddc-profiles.md
-                - navtitle: Bare Metal server certified profiles for SAP HANA on VPC infrastructure
+                - navtitle: Bare Metal server certified profiles for SAP HANA on VPC
                   topic: plan/sap-offerings-hana-iaas-intel-bm-vpc.md
           - topicgroup:
               label: Infrastructure profiles for SAP NetWeaver-based application servers
               topics:
-                - navtitle: Intel Bare Metal server certified profiles for SAP NetWeaver on Classic infrastructure
+                - navtitle: Intel Bare Metal server certified profiles for SAP NetWeaver on Classic
                   topic: plan/sap-offerings-netweaver-iaas-intel-bare-metal-profiles.md
-                - navtitle: AMD Bare Metal server certified profiles for SAP NetWeaver on Classic infrastructure
+                - navtitle: AMD Bare Metal server certified profiles for SAP NetWeaver on Classic
                   topic: plan/sap-offerings-netweaver-iaas-amd-bare-metal-profiles.md
-                - navtitle: Intel virtual server certified profiles for SAP NetWeaver on VPC infrastructure
+                - navtitle: Intel virtual server certified profiles for SAP NetWeaver on VPC
                   topic: plan/sap-offerings-netweaver-iaas-intel-virtual-server-gen2-profiles.md
                 - navtitle: Power Virtual Server certified instances for SAP NetWeaver
                   topic: plan/sap-offerings-netweaver-iaas-power-virtual-server-profiles.md
                 - navtitle: VMware SDDC certified profiles for SAP NetWeaver
                   topic: plan/sap-offerings-netweaver-iaas-vmware-sddc-profiles.md
-                - navtitle: Bare Metal server certified profiles for SAP NetWeaver on VPC infrastructure
+                - navtitle: Bare Metal server certified profiles for SAP NetWeaver on VPC
                   topic: plan/sap-offerings-netweaver-iaas-intel-bm-vpc.md
           - topicgroup:
               label: Plan your SAP workloads
@@ -169,7 +169,7 @@ toc:
               label: Provisioning SAP HANA and SAP NetWeaver
               topics:
                 - topicgroup:
-                    label: Intel Virtual Server on VPC
+                    label: Intel Virtual Server in VPC
                     topics:
                       - navtitle: Planning your deployment
                         topic: howto/vpc-intel-vsi/intel-vsi-provision-gen2-plan-deploy.md
@@ -180,21 +180,21 @@ toc:
                       - navtitle: Using IBM Metrics Collector for SAP (IMCS) on Windows
                         topic: howto/sap-ibm-metrics-collector-windows.md
                 - topicgroup:
-                    label: Intel Bare Metal on VPC
+                    label: Intel Bare Metal in VPC
                     topics:
                       - navtitle: Planning your deployment
                         topic: howto/vpc-intel-bm/intel-bm-provision-gen2-plan-deploy.md
                       - navtitle: Deploying your infrastructure
                         topic: howto/vpc-intel-bm/intel-bm-provision-gen2-deploy-infrastructure.md
                 - topicgroup:
-                    label: Intel Bare Metal on Classic
+                    label: Intel Bare Metal in Classic
                     topics:
                       - navtitle: Planning your deployment
                         topic: howto/classic-intel-bm/classic-intel-bm-provision-plan.md
                       - navtitle: Deploying your infrastructure
                         topic: howto/classic-intel-bm/classic-intel-bm-provision-deploy.md
                 - topicgroup:
-                    label: Intel Bare Metal with Intel Optane DC PMEM on Classic
+                    label: Intel Bare Metal with Intel Optane DC PMEM in Classic
                     topics:
                       - navtitle: Planning your deployment
                         topic: howto/classic-intel-bm/classic-optane-bm-provision-plan.md
@@ -219,67 +219,67 @@ toc:
                       - navtitle: Deploying your infrastructure
                         topic: howto/vmware/vmware-provision-sddc-deploy-infrastructure.md
           - topicgroup:
-              label: Terraform solutions for SAP on VPC
+              label: Terraform for SAP solutions on Intel VPC
               topics:
                 - navtitle: Terraform deployment templates
                   topic: howto/vpc-intel-vsi/intel-vsi-terraform-landing.md
                 - navtitle: Deploying the SAP bastion server – SAP media storage repository
                   topic: howto/vpc-intel-vsi/intel-vsi-terraform-bastion-server.md
-                - navtitle: Creating 2-tier VPC for SAP on VPC with terraform
+                - navtitle: Creating single-tier VPC for SAP
                   topic: howto/vpc-intel-vsi/intel-vsi-terraform-create-single-tier.md
-                - navtitle: Deploying SAP AnyDB (non-SAP HANA) 2-tier and 3-tier distributed architecture on IBM Cloud® VPC (Terraform)
+                - navtitle: Deploying SAP AnyDB (non-SAP HANA) 2-tier and 3-tier distributed architecture in VPC
                   topic: howto/vpc-intel-vsi/intel-vsi-terraform-multi-tier-anydb-nonhana.md
                 - topicgroup:
-                    label: SAP NetWeaver and Db2 2-tier on VPC
+                    label: SAP NetWeaver and Db2 2-tier in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-overview-nw-db2-ansible.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-nw-db2-ansible-existing-vpc.md
                 - topicgroup:
-                    label: SAP NetWeaver and Db2 3-tier on VPC
+                    label: SAP NetWeaver and Db2 3-tier in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-overview-3tier-nw-db2-ansible.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-3tier-nw-db2.md
                 - topicgroup:
-                    label: SAP HANA stand-alone VSI on VPC
+                    label: SAP HANA stand-alone VSI in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-background-hana-standalone-vsi.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-hana-standalone-vsi.md
                 - topicgroup:
-                    label: SAP AAS for SAP HANA and AnyDB on VPC
+                    label: SAP AAS for SAP HANA and AnyDB in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-intro-hana-aas-anydb.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-hana-aas-anydb.md
                 - topicgroup:
-                    label: SAP NetWeaver and ASE SYBASE on VPC
+                    label: SAP NetWeaver and SAP ASE in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-intro-nw-asesyb.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-nw-asesyb.md
                 - topicgroup:
-                    label: SAP NetWeaver(ABAP) on ASE SYBASE HA deployment on VPC
+                    label: SAP NetWeaver (ABAP) on SAP ASE HA deployment in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-ha-deployment.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-ase-sybase-ha-deployment.md
                 - topicgroup:
-                    label: SAP S/4HANA HA deployment on VPC
+                    label: SAP S/4HANA HA deployment in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-ha-overview.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-s4hana-ha.md
                 - topicgroup:
-                    label: SAP NetWeaver HA deployment on VPC
+                    label: SAP NetWeaver HA deployment in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-nw-abap-ha-szmz-overview.md
@@ -293,35 +293,35 @@ toc:
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-hana-db-backup-cos-proc.md
                 - topicgroup:
-                    label: SAP S/4HANA workload deployment on VPC
+                    label: SAP S/4HANA workload deployment in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-intro-s4hana-ansible.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-s4hana-ansible.md
                 - topicgroup:
-                    label: SAP HANA DB cross-region DR automation on VPC
+                    label: SAP HANA DB cross-region DR automation in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-intro-hana-db-crossregion-dr.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-hana-db-crossregion-dr.md
                 - topicgroup:
-                    label: SAP BW/4HANA 3-tier on VPC
+                    label: SAP BW/4HANA 3-tier in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-bw-4hana-overview.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-bw-4hana.md
                 - topicgroup:
-                    label: SAP NetWeaver 7.x on HANA db 3-tier on VPC
+                    label: SAP NetWeaver 7.x on HANA db 3-tier in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-intro-3tier-nw-hana.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-automate-3tier-nw-hana.md
                 - topicgroup:
-                    label: SAP ASE Sybase standalone database instance on VPC
+                    label: SAP ASE standalone database instance in VPC
                     topics:
                       - navtitle: Overview
                         topic: howto/vpc-intel-vsi/intel-vsi-terraform-background-ase-sybase-standalone-vsi.md
@@ -399,7 +399,7 @@ toc:
               topics:
                 - navtitle: SAP HANA scale-out on Intel
                   topic: reference/intel-sap-refarch-hana-scaleout.md
-                - navtitle: SAP NetWeaver 7.x on UNIX with Sybase on VPC
+                - navtitle: SAP NetWeaver 7.x on UNIX with SAP ASE on VPC
                   topic: reference/vpc-intel-vsi-sap-refarch-nw-sybase.md
                 - navtitle: SAP NetWeaver 7.x on UNIX with Db2 on VPC
                   topic: reference/vpc-intel-vsi-sap-refarch-nw-db2.md
